<resources>
    <string name="app_name">MovieSearch</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="one_of_the_conditions_is_not_met">One of the conditions is not met</string>
    <string name="password_is_too_simple">Password is too simple</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone number</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="user_with_this_phone_number_exists">User with this phone number already exists</string>
    <string name="user_with_this_email_exists">User with this email already exists</string>
    <string name="user_with_this_username_exists">User with this username already exists</string>
    <string name="user_with_this_email_does_not_exists">User with this email doesn\'t exist</string>
    <string name="wrong_password">Wrong password! Please try another...</string>
    <string name="catalog">Catalog</string>
    <string name="add_movie">Add movie</string>
    <string name="profile">Profile</string>
    <string name="change">Change</string>
    <string name="change_password">Change password</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="enter_username">Please, enter new username</string>
    <string name="enter_email">Please, enter new email</string>
    <string name="enter_phone_number">Please, enter new phone number</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="entered_email_is_invalid">Entered email is invalid, please try another</string>
    <string name="entered_username_is_invalid">Entered username is invalid, please try another</string>
    <string name="entered_phone_is_invalid">Entered phone number is invalid, please try another</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="wrong_password_entered">Current password was entered incorrectly</string>
    <string name="successfully_changed_password">Successfully changed password</string>
    <string name="account_deleted_message">This account was deleted no later than 7 days ago and you can still restore it. What would you like to do?</string>
    <string name="account_deleted">This account has been deleted</string>
    <string name="restore_account">Restore</string>
    <string name="delete_account_forever">Delete</string>
    <string name="successfully_restored">Successfully restored your account</string>
    <string name="successfully_deleted">Successfully deleted your account</string>
    <string name="movie_title">Movie Title</string>
    <string name="release_year">Release Year</string>
    <string name="movie_description">Movie Description</string>
    <string name="movie_poster_url">Movie Poster URL</string>
    <string name="save">Save</string>
    <string name="successfully_added_movie">Successfully added movie to catalog!</string>
    <string name="movie_already_exists">Such movie already exists!</string>
    <string name="there_is_nothing_to_show">There is nothing to show...</string>
    <string name="movie_item_release_year">Release year: %d</string>
    <string name="undo">Undo</string>
    <string name="item_was_removed_successfully">Item was removed successfully!</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="rate_a_movie">Rate a movie</string>
    <string name="exit">Exit</string>
</resources>